# WeekendWordleBot

./: .gitignore  LICENSE  README.md  atomic_cache_demo.py  atomic_tests.py  cache.py  classifier.py  core.py  engine.py  game_runtime.py  helpers.py  main.py  main_faster.py  main_tree.py  multithreading_test.py  numpy_atomic.py  pyproject.toml  queue_engine.py  tests.py
LICENSES/: ATOMIC_LICENSE  DEPENDENCY_LICENSES.md  HUNSPELL_LICENSE
demos/: PU_word_classifier_demo.py  XGB_word_classifier_demo.py  atomic_tests.py
demos/ClassifierSectionDemo/: ClassifierSectionDemo.py
demos/ML demos/: PU_word_classifier_demo.py  RF_word_classifier_demo.py
demos/cache demo/: atomic_cache_demo.py  atomic_tests.py
demos/collapsible_list_demo/: collapsible_demo.tcss  collapsible_list_demo.py  deletable_collapsible.py  dynamic_collapsible_list.py  dynamic_collapsible_list.tcss
demos/progress bar demo/: progress_bar.py  progress_bar.tcss
demos/wordle app demo/: board.py  screens.py  sidebar.py  stats_display.py  wordle_app.tcss
demos/wordle app demo refactored/: board.py  screens.py  sidebar.py  wordle_app.py
demos/wordle board demo/: wordle_board_demo.py  wordle_board_demo.tcss
demos/wordle game screen demos/finalized/: board.py  progress.py  sidebar.py  stats_display.py  text_processors.py  wordle_app.tcss  worlde_app.py
demos/wordle game screen demos/rough/: wordle_demo.py  wordle_demo.tcss
src/: main.py
src/weekend_wordle/: __init__.py  config.py
src/weekend_wordle/backend/: atomic_ops.py  cache.py  classifier.py  core.py  engine.py  game_runtime.py  helpers.py  main.py  messenger.py  tests.py
src/weekend_wordle/gui/: loading_screen.py  screens.py  setup_screen.py  setup_screen.tcss  text_processors.py  wordle_app.py  wordle_app.tcss
src/weekend_wordle/gui/game/: board_widget.py  confirm_screen.py  game_screen.py  game_screen.tcss  progress_widget.py  sidebar_widget.py  state.py
src/weekend_wordle/gui/loading/: loading_screen.py  loading_screen.tcss
src/weekend_wordle/gui/settings/: settings_screen.py  settings_screen.tcss
src/weekend_wordle/gui/setup/: config_protocol.py  dynamic_list_widget.py  filter_widget.py  loading_widget.py  setup_screen.py  setup_screen.tcss
src/weekend_wordle/gui/startup/: startup_screen.py  startup_screen.tcss  transitional_loading_screen.py
src/weekendwordle/: __init__.py  config.json  config.py  config_loader.py
src/weekendwordle/backend/: atomic_ops.py  cache.py  classifier.py  cli_app.py  core.py  game_runtime.py  helpers.py  main.py  messenger.py
src/weekendwordle/data/: past_answers.txt  trained_classifier.pkl
src/weekendwordle/gui/: wordle_app.py
src/weekendwordle/gui/game/: game_screen.py  sidebar_widget.py  state.py
src/weekendwordle/gui/loading/: loading_screen.py
src/weekendwordle/gui/settings/: settings_screen.py  settings_screen.tcss
src/weekendwordle/gui/setup/: dynamic_list_widget.py  filter_widget.py  loading_widget.py  setup_screen.py  setup_screen.tcss
src/weekendwordle/gui/startup/: startup_screen.py  startup_screen.tcss
