[project]
name = "wordlebot"
version = "0.1.0"
description = "Basic wordle bot based on entropy optimization."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "en-core-web-lg",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyfiglet>=1.0.4",
    "requests>=2.32.4",
    "scikit-learn>=1.7",
    "spacy>=3.8.7",
    "textual>=5.3.0",
    "textual-dev>=1.7.0",
    "textual-pyfiglet>=1.1.0",
    "tqdm>=4.67.1",
    "wordfreq>=3.1.1",
    "xgboost>=3.0.2",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
