[build-system]
requires = ["uv_build>=0.8.17"]
build-backend = "uv_build"

[project]
name = "weekendwordle"
version = "0.1.0"
description = "WeekendWordle is a Python framework and TUI built to find near-optimal guesses for the modern, New York Times version of Wordle."
readme = "README.md"
license-files = ["LICEN[CS]E.*", "LICEN[CS]ES/*"]
license = "MIT"
requires-python = ">=3.13.5"
authors = [{name="Benjamin Saunders", email="bengsaunders@gmail.com"}]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "en-core-web-lg",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyfiglet>=1.0.4",
    "requests>=2.32.4",
    "scikit-learn>=1.7",
    "spacy>=3.8.7",
    "textual>=5.3.0",
    "textual-dev>=1.7.0",
    "textual-pyfiglet>=1.1.0",
    "tqdm>=4.67.1",
    "wordfreq>=3.1.1",
]

[project.optional-dependencies]
demos = [
    "xgboost>=3.0.2",
    "lightgbm>=4.6.0",
]

[project.scripts]
weekendwordlebot = "weekendwordle.gui.wordle_app:run_app"
weekendwordlebot_cli = "weekendwordle.gui.wordle_app:run_app"

[project.urls]
"Homepage" = "https://github.com/flyingfaller/WeekendWordleBot"


[tool.uv.build-backend]
data = ["data"]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
